Fixed text overflow bug

--- a/src/Todo.css
+++ b/src/Todo.css
@@ -7,9 +7,11 @@
 }
 
 .Todo p {
-  overflow-wrap: break-word;
+  margin-left: 1rem;
   font-size: 1.4rem;
   font-weight: 200;
+  display: inline-block;
+  word-break: break-word;
 }
 
 .Todo-checked {
